# fundloadsTechChallenge

./: .gitignore  AGENTS.md  README.md  docker-compose.jaeger.yml  output_exp_mp_jaeger.txt  pyproject.toml  test_ipc.py
.github/workflows/: coverage.yml
docs/: Challenge task.md  Developer instructions.md  Solution.md
docs/analysis/: Reasoning and assumptions.md
docs/framework/: _Index_of_framework.md
docs/guide/: Ruby-Friendly Python for Streaming Systems.md
docs/implementation/: Development plan.md  Documentation structure.md  Implementation report.md  Retrospective - Ruby-friendly alignment.md  Toolchain and Dependencies.md  implementation report.md
docs/legacy/: experiment_config.yml
src/fund_load/: __main__.py  baseline_config.yml  baseline_config_newgen.yml  baseline_config_newgen_multiprocess.yml  baseline_config_newgen_multiprocess_jaeger.yml  experiment_config.yml  experiment_config_newgen.yml  experiment_config_newgen_multiprocess.yml  experiment_config_newgen_multiprocess_jaeger.yml  main.py
tests/adapters/: test_input_source.py  test_output_sink.py  test_prime_checker.py  test_trace_sinks.py  test_window_store.py
tests/cli/: test_cli.py  test_cli_tracing_overrides.py
tests/config/: test_config_loader.py
tests/domain/: test_messages.py  test_money.py  test_reasons.py
tests/fund_load/: test_entrypoints.py  test_newgen_configs.py
tests/integration/: test_end_to_end_baseline_limits.py  test_end_to_end_experiment_features.py  test_runner_tracing_integration.py  test_scenarios.py
tests/kernel/: test_composition_root.py  test_context.py  (+6 more)
(+397 files in other folders)
